--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.50",
     "@clerk/nextjs": "^5.7.1",
     "@hookform/resolvers": "^3.9.0",
+    "@notionhq/client": "^2.2.15",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -32,7 +35,9 @@
     "@uploadcare/react-uploader": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "framer-motion": "^11.11.8",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
